Update Reviewer Nominations link text

--- a/index.html
+++ b/index.html
@@ -221,8 +221,7 @@
       <nav class="links">
         <a class="btn ghost" href="#cfp">Call for Papers</a>
         <a class="btn ghost" href="#dates">Important Dates</a>
-        <a class="btn ghost" href="#reviewers">Reviewer Nominations</a>
-        <a class="btn" href="#subscribe">Subscribe</a>
+        <a class="btn" href="#reviewers">Reviewer Nomination</a>
       </nav>
     </div>
   </header>
