--- a/index.html
+++ b/index.html
@@ -7,19 +7,25 @@
   <meta name="description" content="ReALM-GEN: Real-World–Constrained and Preference-Aligned Flow- and Diffusion-Based Models" />
   <link rel="icon" href="favicon.ico" />
   <style>
-    :root{
-      --bg: #0b0d10;          /* near-black */
-      --card: #12151a;        /* dark card */
-      --text: #e7ecf3;        /* off-white */
-      --muted: #9aa7b4;       /* muted */
-      --brand: #6aa3ff;       /* gradient start */
-      --brand2: #7a5cff;      /* gradient end */
-      --accent: #2a3340;
-      --ring: rgba(122,92,255,.4);
-      --maxw: 1100px;
-      --radius: 18px;
-      --shadow: 0 10px 30px rgba(0,0,0,.35);
-    }
+      :root{
+  --bg: #f3f4f6;          /* light grey page */
+  --card: #ffffff;        /* white cards */
+  --text: #111827;        /* near-black text */
+  --muted: #4b5563;       /* muted grey text */
+
+  --brand: #2563eb;       /* blue */
+  --brand2: #7c3aed;      /* purple */
+
+  --accent: #eef2f7;      /* subtle grey fill */
+  --border: #e5e7eb;      /* light border */
+  --ring: rgba(37,99,235,.25);
+
+  --maxw: 1100px;
+  --radius: 18px;
+  --shadow: 0 10px 25px rgba(17,24,39,.08);
+}
+
+  
 
     html,body{height:100%;}
     body{
