--- a/index.html
+++ b/index.html
@@ -26,15 +26,23 @@
     }
 
     html,body{height:100%;}
+    
     body{
-      margin:0;
-      font:16px/1.6 system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;
-      color:var(--text);
-      background:
-        radial-gradient(1200px 800px at 80% -10%, rgba(124,58,237,.10), transparent 60%),
-        radial-gradient(800px 500px at -10% 20%, rgba(37,99,235,.08), transparent 60%),
-        var(--bg);
-    }
+  margin:0;
+  font:16px/1.6 system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;
+  color:var(--text);
+
+  /* Background image + soft overlay for readability */
+  background:
+    linear-gradient(to bottom, rgba(243,244,246,.82), rgba(243,244,246,.82)),
+    url("realmgen_bg.png");
+
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+}
+
 
     a{color:inherit;}
     .wrap{max-width:var(--maxw); margin:0 auto; padding:0 20px;}
