Fix background image filename in CSS

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   /* Background image + soft overlay for readability */
   background:
     linear-gradient(to bottom, rgba(243,244,246,.82), rgba(243,244,246,.82)),
-    url("realmgen_bg.png");
+    url("realm_gen_bg.png");
 
   background-size: cover;
   background-position: center;
