--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
       </div>
     </section>
 
-    <section id="about">
+    <section id="cfp">
       <div class="grid">
         <article class="card span12">
           <h2>Call for Papers</h2>
@@ -262,7 +262,7 @@
       </div>
     </section>
 
-    <section id="cfp">
+    <section id="submission_details">
       <div class="grid">
         <article class="card span12">
           <h3>Submission Details</h3>
@@ -375,8 +375,8 @@
     <section id="reviewers">
       <div class="grid">
         <article class="card span12">
-          <h3>Reviewer Nominations</h3>
-          <p>Nominate yourself or others to serve as reviewers.</p>
+          <h3>Reviewer Nomination</h3>
+          <p>Nominate yourself or others to serve as a reviewer.</p>
 
           <details class="toggle-card">
             <summary>Open the reviewer nomination form</summary>
