--- a/index.html
+++ b/index.html
@@ -182,10 +182,12 @@
     .person .role{color:var(--muted); font-size:13px; margin-top:2px;}
     .person .affil{color:var(--muted); font-size:12.5px; margin-top:2px;}
 
-    /* BIG variant (still compact, just slightly larger) */
-    .people-grid.big{grid-template-columns:repeat(auto-fit, minmax(260px, 1fr));}
-    .person.big{padding:14px;}
-    .avatar.big{width:86px; height:86px; border-radius:14px;}
+
+    /* BIG variant (larger headshots) */
+.people-grid.big{grid-template-columns:repeat(auto-fit, minmax(320px, 1fr));}
+.person.big{padding:18px; gap:16px;}
+.avatar.big{width:128px; height:128px; border-radius:16px;}
+
 
     footer{
       border-top:1px solid var(--border);
