--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     .hero{padding:72px 0 40px;}
     .hero .card{
       display:grid;
-      grid-template-columns:360px 1fr; /* enlarged logo column */
+      grid-template-columns:420px 1fr; /* enlarged logo column */
       gap:24px;
       align-items:center;
       background:linear-gradient(180deg, rgba(255,255,255,.65), rgba(255,255,255,.25)), var(--card);
@@ -216,7 +216,7 @@
   <header>
     <div class="wrap nav">
       <a class="logo" href="#">
-        <img src="realm-gen-logo.png" alt="ReALM-GEN logo" />
+        <img src="realm-gen-logo_only.png" alt="ReALM-GEN logo" />
         <span>ReALM-GEN Workshop</span>
       </a>
       <nav class="links">
@@ -230,7 +230,7 @@
   <main class="wrap">
     <section class="hero">
       <div class="card">
-        <img class="logo" src="realm-gen-logo.png" alt="ReALM-GEN" />
+        <img class="logo" src="realm-gen-logo_only.png" alt="ReALM-GEN" />
         <div>
           <h1 class="title">Real-World Constrained and Preference-Aligned Flow and Diffusion-Based Models</h1>
           <p class="subtitle">A workshop on post-training and inference-time alignment for generative models.</p>
