--- a/index.html
+++ b/index.html
@@ -262,6 +262,8 @@
           </ul>
         </article>
       </div>
+
+      <! -- Morteza add >
     </section>
 
     <section id="submission_details">
