--- a/index.html
+++ b/index.html
@@ -252,14 +252,22 @@
             Our goal is to connect <strong>theory</strong> (e.g., distribution tilting / stochastic optimal control / optimal transport perspectives) with <strong>methods</strong> (e.g., guidance, reward-based fine-tuning, test-time adaptation) and <strong>real deployments</strong> (imaging, language/multimodal, molecules, robotics).
           </p>
 
-          <h3>Topics of interest</h3>
-          <p>We welcome submissions on (and beyond):</p>
-
+          Our workshop spans theory, methodology and applications as detailed below:
           <ul class="list">
             <li><strong>Theory:</strong> distribution tilting and energy-based views; stochastic optimal control; Schrödinger bridges / optimal transport connections; identifiability and steerability of diffusion/flow models.</li>
             <li><strong>Methodology:</strong> supervised / reward-based / sampling-based post-training; efficient conditional generation and constraint satisfaction (guidance, adapters, plug-and-play); test-time scaling and inference-time alignment; discrete diffusion guidance and diffusion language models.</li>
             <li><strong>Applications:</strong> inverse problems (e.g., medical/scientific imaging), vision and robotics, language and multimodal reasoning, tabular synthesis, protein/molecule design, and safety alignment.</li>
           </ul>
+
+          <h3>Topics of interest</h3>
+          <p>We welcome submissions on (and beyond):</p>
+          The main topics of interest of ReALM-GEN include the following areas:
+        <li><strong> Inverse Problems</strong>: Diffusion priors for inverse imaging problems, physics–guided inference.</li>
+        <li><strong>Conditional Generation</strong>: Text–to–image/video, style transfer, in-context editing, counterfactual generation.</li>
+        <li><strong>Steering</strong>: Latent editing and representation engineering, score-based guidance, plug-and-play modules, and preference-optimization methods for alignment (DPO, GRPO, etc.)</li>
+        <li><strong>Safety alignment</strong>: Concept engineering, sparse-autoencoder (SAE) probes.</li>
+        <li><strong>Fine Tuning</strong>: Supervised, Reward- and sampling-based fine-tuning.</li>
+        <li><strong>Diffusion Language Models</strong>: Guidance for (discrete) diffusion language models, constrained decoding of diffusion LLMs. </li>      
         </article>
       </div>
 
@@ -277,9 +285,12 @@
           </p>
           <ul class="list">
             <li>Submission site: <strong>OpenReview</strong></li>
-            <li>Formatting &amp; policy: follow ICLR workshop guidelines</li>
+            <li>Formatting &amp; policy: submit a single PDF using the ICLR LaTeX style (keep margins/font sizes unchanged).
+              <li>Anonymize: remove names, affiliations, acknowledgements; avoid identifying links in supplements/code.</li>
+       <li></li>Include references and (optional) appendix in the same PDF.follow ICLR workshop guidelines</li>
             <li>Contact: <a href="#contact">realm-gen-org@tba</a></li>
           </ul>
+
         </article>
       </div>
     </section>
