--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
           <p class="subtitle">A workshop on post-training and inference-time alignment for generative models.</p>
           <div class="meta">
             <span class="pill">ICLR 2026 • <em>Rio de Janeiro / April 26th, 2026</em></span>
-            <span class="pill">Hybrid (in-person + virtual)</span>
+            <span class="pill">Hybrid (in-person)</span>
           </div>
         </div>
       </div>
@@ -258,20 +258,20 @@
             <li><strong>Methodology:</strong> supervised / reward-based / sampling-based post-training; efficient conditional generation and constraint satisfaction (guidance, adapters, plug-and-play); test-time scaling and inference-time alignment; discrete diffusion guidance and diffusion language models.</li>
             <li><strong>Applications:</strong> inverse problems (e.g., medical/scientific imaging), vision and robotics, language and multimodal reasoning, tabular synthesis, protein/molecule design, and safety alignment.</li>
           </ul>
-
+         <p>
           <h3>Topics of interest</h3>
-          <p>We welcome submissions on (and beyond):</p>
-          The main topics of interest of ReALM-GEN include the following areas:
+          We welcome submissions on (and beyond):
         <li><strong> Inverse Problems</strong>: Diffusion priors for inverse imaging problems, physics–guided inference.</li>
         <li><strong>Conditional Generation</strong>: Text–to–image/video, style transfer, in-context editing, counterfactual generation.</li>
         <li><strong>Steering</strong>: Latent editing and representation engineering, score-based guidance, plug-and-play modules, and preference-optimization methods for alignment (DPO, GRPO, etc.)</li>
         <li><strong>Safety alignment</strong>: Concept engineering, sparse-autoencoder (SAE) probes.</li>
         <li><strong>Fine Tuning</strong>: Supervised, Reward- and sampling-based fine-tuning.</li>
-        <li><strong>Diffusion Language Models</strong>: Guidance for (discrete) diffusion language models, constrained decoding of diffusion LLMs. </li>      
+        <li><strong>Diffusion Language Models</strong>: Guidance for (discrete) diffusion language models, constrained decoding of diffusion LLMs. </li>   
+          </p>
         </article>
+        
       </div>
 
-      <! -- Morteza add >
     </section>
 
     <section id="submission_details">
