--- a/index.html
+++ b/index.html
@@ -261,12 +261,14 @@
          <p>
           <h3>Topics of interest</h3>
           We welcome submissions on (and beyond):
+           <ul class="list">
         <li><strong> Inverse Problems</strong>: Diffusion priors for inverse imaging problems, physics–guided inference.</li>
         <li><strong>Conditional Generation</strong>: Text–to–image/video, style transfer, in-context editing, counterfactual generation.</li>
         <li><strong>Steering</strong>: Latent editing and representation engineering, score-based guidance, plug-and-play modules, and preference-optimization methods for alignment (DPO, GRPO, etc.)</li>
         <li><strong>Safety alignment</strong>: Concept engineering, sparse-autoencoder (SAE) probes.</li>
         <li><strong>Fine Tuning</strong>: Supervised, Reward- and sampling-based fine-tuning.</li>
         <li><strong>Diffusion Language Models</strong>: Guidance for (discrete) diffusion language models, constrained decoding of diffusion LLMs. </li>   
+              </ul>
           </p>
         </article>
         
