--- a/index.html
+++ b/index.html
@@ -287,10 +287,10 @@
           </p>
           <ul class="list">
             <li>Submission site: <strong>OpenReview</strong></li>
-            <li>Formatting &amp; policy: submit a single PDF using the ICLR LaTeX style (keep margins/font sizes unchanged).
+            <li>Formatting &amp; policy: submit a single PDF using the <a href="ICLR LaTeX style">https://github.com/ICLR/Master-Template/raw/master/iclr2026.zip</a> (keep margins/font sizes unchanged).
               <li>Anonymize: remove names, affiliations, acknowledgements; avoid identifying links in supplements/code.</li>
-       <li></li>Include references and (optional) appendix in the same PDF.follow ICLR workshop guidelines</li>
-            <li>Contact: <a href="#contact">realm-gen-org@tba</a></li>
+            <li>Include references and (optional) appendix in the same PDF.follow ICLR workshop guidelines</li>
+            <li>Contact: <a href="#contact">realmgen.workshop@gmail.com</a></li>
           </ul>
 
         </article>
@@ -425,7 +425,7 @@
       <div class="grid">
         <article class="card span12">
           <h3>Contact &amp; Links</h3>
-          <p>Email: realm-gen-org@tba • X: <a href="#">@realmgen</a> • GitHub: <a href="https://github.com/">ReALM-GEN</a></p>
+          <p>Email: realmgen.workshop@gmail.com • X: <a href="#">@realmgen</a> • GitHub: <a href="https://github.com/">ReALM-GEN</a></p>
         </article>
       </div>
     </section>
