--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
             Accepted papers will be presented as posters; selected works may receive spotlights.
           </p>
           <ul class="list">
-            <li>Submission site: <strong>OpenReview</strong></li>
+            <li>Submission site: <strong><a href="#OpenReview">https://openreview.net/group?id=ICLR.cc/2026/Workshop/ReALM-GEN</a></strong></li>
             <li>Formatting &amp; policy: submit a single PDF using the <a href="https://github.com/ICLR/Master-Template/raw/master/iclr2026.zip">ICLR LaTeX style</a> (keep margins/font sizes unchanged).
               <li>Anonymize: remove names, affiliations, acknowledgements; avoid identifying links in supplements/code.</li>
             <li>Include references and (optional) appendix in the same PDF.follow ICLR workshop guidelines</li>
