--- a/index.html
+++ b/index.html
@@ -262,12 +262,11 @@
           <h3>Topics of interest</h3>
           We welcome submissions on (and beyond):
            <ul class="list">
-        <li><strong> Inverse Problems</strong>: Diffusion priors for inverse imaging problems, physics–guided inference.</li>
-        <li><strong>Conditional Generation</strong>: Text–to–image/video, style transfer, in-context editing, counterfactual generation.</li>
-        <li><strong>Steering</strong>: Latent editing and representation engineering, score-based guidance, plug-and-play modules, and preference-optimization methods for alignment (DPO, GRPO, etc.)</li>
-        <li><strong>Safety alignment</strong>: Concept engineering, sparse-autoencoder (SAE) probes.</li>
-        <li><strong>Fine Tuning</strong>: Supervised, Reward- and sampling-based fine-tuning.</li>
-        <li><strong>Diffusion Language Models</strong>: Guidance for (discrete) diffusion language models, constrained decoding of diffusion LLMs. </li>   
+        <li><strong> Inverse Problems</strong>: Diffusion priors for inverse problems.</li>
+        <li><strong>Conditional Generation</strong>: Text–to–image/video/3D, style transfer, in-context editing, counterfactual generation.</li>
+        <li><strong>Steering</strong>: : Latent editing and representation engineering, score-based guidance, concept engineering.</li>
+        <li><strong>Alignment</strong>: RL-based sampling & fine-tuning (e.g RLHF, RLVR, optimal control).</li>
+        <li><strong>Diffusion LLMs</strong>: Guidance for (discrete) diffusion LLMs, constrained decoding & reasoning. </li>   
               </ul>
           </p>
         </article>
@@ -281,7 +280,7 @@
         <article class="card span12">
           <h3>Submission Details</h3>
           <p>
-            We invite full papers and 4-page extended abstracts (non-archival) on any relevant topic.
+            We invite full papers (up to 9 pages) and  short papers featuring preliminary ideas and late-breaking results (up to 4 pages) on any relevant topic.
             All submissions are double-blind and will receive at least two reviews.
             Accepted papers will be presented as posters; selected works may receive spotlights.
           </p>
