--- a/index.html
+++ b/index.html
@@ -285,10 +285,10 @@
             Accepted papers will be presented as posters; selected works may receive spotlights.
           </p>
           <ul class="list">
-            <li>Submission site: <strong><a href="#OpenReview">https://openreview.net/group?id=ICLR.cc/2026/Workshop/ReALM-GEN</a></strong></li>
+            <li>Submission site: <strong><a href="https://openreview.net/group?id=ICLR.cc/2026/Workshop/ReALM-GEN">OpenReview</a></strong></li>
             <li>Formatting &amp; policy: submit a single PDF using the <a href="https://github.com/ICLR/Master-Template/raw/master/iclr2026.zip">ICLR LaTeX style</a> (keep margins/font sizes unchanged).
               <li>Anonymize: remove names, affiliations, acknowledgements; avoid identifying links in supplements/code.</li>
-            <li>Include references and (optional) appendix in the same PDF.follow ICLR workshop guidelines</li>
+            <li>Include references and (optional) appendix in the same PDF.</li>
             <li>Contact: <a href="#contact">realmgen.workshop@gmail.com</a></li>
           </ul>
 
@@ -301,9 +301,9 @@
         <article class="card span12">
           <h3>Important Dates</h3>
           <ul class="list">
-            <li>Submission deadline: <strong>January 30, 2026 (AOE)</strong></li>
+            <li>Submission deadline: <strong>February 5th, 2026 (AOE)</strong></li>
             <li>Notification: <strong>March 1st, 2026</strong></li>
-            <li>Camera-ready / poster: <strong>TBA</strong></li>
+            <li>Camera-ready / poster: <strong>April 5th, 2026</strong></li>
             <li>Workshop: <strong>April 26th, 2026</strong></li>
           </ul>
         </article>
@@ -311,10 +311,6 @@
         <article class="card span12" id="speakers">
           <h3>Invited Speakers</h3>
           <div class="people-grid big">
-            <div class="person big">
-              <img class="avatar big" src="speakers/yaron_lipman.jpeg" alt="Yaron Lipman headshot" />
-              <div><div class="name">Yaron Lipman</div><div class="role">Invited Speaker</div><div class="affil">Meta (FAIR), Israel</div></div>
-            </div>
             <div class="person big">
               <img class="avatar big" src="speakers/jong_chul_ye.jpeg" alt="Jong Chul Ye headshot" />
               <div><div class="name">Jong Chul Ye</div><div class="role">Invited Speaker</div><div class="affil">KAIST, South Korea</div></div>
