--- a/index.html
+++ b/index.html
@@ -330,6 +330,10 @@
               <img class="avatar big" src="speakers/peter_holderieth.jpeg" alt="Peter Holderieth headshot" />
               <div><div class="name">Peter Holderieth</div><div class="role">Invited Speaker</div><div class="affil">MIT, USA</div></div>
             </div>
+             <div class="person big">
+              <img class="avatar big" src="speakers/albergo.jpeg" alt="Peter Holderieth headshot" />
+              <div><div class="name">Michael Albergo</div><div class="role">Invited Speaker</div><div class="affil">Harvard, USA</div></div>
+            </div>
           </div>
         </article>
 
