--- a/index.html
+++ b/index.html
@@ -353,6 +353,11 @@
               <div><div class="name">Tali Dekel</div><div class="affil">Weizmann Institute, Israel</div></div>
             </div>
           </div>
+          <div class="person big">
+              <img class="avatar big" src="panelists/carles.jpeg" alt="Carles headshot" />
+              <div><div class="name">Carles Domingo-Enrich</div><div class="affil">Microsoft Research</div></div>
+            </div>
+          </div>
         </article>
 
         <article class="card span12" id="organizers">
