--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
               <div><div class="name">Yingzhen Li</div><div class="affil">Imperial College London, UK</div></div>
             </div>
             <div class="person big">
-              <img class="avatar big" src="organizers/morteza_mardani.jpeg" alt="Morteza Mardani headshot" />
+              <img class="avatar big" src="organizers/morteza_2.jpeg" alt="Morteza Mardani headshot" />
               <div><div class="name">Morteza Mardani</div><div class="affil">NVIDIA, USA</div></div>
             </div>
             <div class="person big">
