--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
           </p>
           <ul class="list">
             <li>Submission site: <strong><a href="https://openreview.net/group?id=ICLR.cc/2026/Workshop/ReALM-GEN">OpenReview</a></strong></li>
-            <li>Formatting &amp; policy: submit a single PDF using the <a href="https://github.com/ICLR/Master-Template/raw/master/iclr2026.zip">ICLR LaTeX style</a> (keep margins/font sizes unchanged).
+            <li>Formatting &amp; policy: submit a single PDF using the <a href="iclr2026_realmgen.zip"> LaTeX style</a> (keep margins/font sizes unchanged).
               <li>Anonymize: remove names, affiliations, acknowledgements; avoid identifying links in supplements/code.</li>
             <li>Include references and (optional) appendix in the same PDF.</li>
             <li>Contact: <a href="#contact">realmgen.workshop@gmail.com</a></li>
