--- a/index.html
+++ b/index.html
@@ -282,6 +282,8 @@
             We invite full papers (up to 9 pages) and  short papers featuring preliminary ideas and late-breaking results (up to 4 pages) on any relevant topic.
             All submissions are double-blind and will receive at least two reviews.
             Accepted papers will be presented as posters; selected works may receive spotlights.
+             <br><br>
+  <strong>⚠️ This is a <u>non-archival</u> workshop: accepted papers will appear on OpenReview, but <u>no formal proceedings will be published</u>.</strong>
           </p>
           <ul class="list">
             <li>Submission site: <strong><a href="https://openreview.net/group?id=ICLR.cc/2026/Workshop/ReALM-GEN">OpenReview</a></strong></li>
