Update submission deadline in index.html

--- a/index.html
+++ b/index.html
@@ -302,7 +302,12 @@
         <article class="card span12">
           <h3>Important Dates</h3>
           <ul class="list">
-            <li>Submission deadline: <strong>February 5th, 2026 (AOE)</strong></li>
+           <li>
+    Submission deadline:
+    <del style="color:#888;">February 5th, 2026 (AOE)</del>
+    &nbsp;→&nbsp;
+    <strong>February 12th, 2026 (AOE)</strong>
+  </li>
             <li>Notification: <strong>March 1st, 2026</strong></li>
             <li>Camera-ready / poster: <strong>April 5th, 2026</strong></li>
             <li>Workshop: <strong>April 26th, 2026</strong></li>
